--- a/index.html
+++ b/index.html
@@ -20,16 +20,66 @@
 			'use strict';
 
 			var words = [
-			{'en': 'read', 'ja': '読む'},
-			{'en': 'write', 'ja': '書く'},
-			{'en': 'eat', 'ja': '食べる'},
-			{'en': 'run', 'ja': '走る'},
-			{'en': 'walk', 'ja': '歩く'},
-			{'en': 'apple', 'ja': 'りんご'},
-			{'en': 'blue', 'ja': '青'},
-			{'en': 'cat', 'ja': '猫'},
-			{'en': 'dig', 'ja': '掘る'},
-			{'en': 'egg', 'ja': '卵'}
+			{'en': 'conduct', 'ja': '～を行う'},
+			{'en': 'necessary', 'ja': '必要な'},
+			{'en': 'the middle', 'ja': '中央'},
+			{'en': 'data', 'ja': 'データ'},
+			{'en': 'measure', 'ja': '(大きさ・量・速さなど)を測る'},
+			{'en': 'Western', 'ja': '西洋の'},
+			{'en': 'gain', 'ja': '～を得る'},
+			{'en': 'the whole', 'ja': '全体の'},
+			{'en': 'article', 'ja': '記事'},
+			{'en': 'source', 'ja': '(物・事の)源'},
+			{'en': 'guess', 'ja': '～を推測する'},
+			{'en': 'personal', 'ja': '個人の'},
+			{'en': 'adapt', 'ja': '～を適合させる'},
+			{'en': 'general', 'ja': '一般的な'},
+			{'en': 'decade', 'ja': '10年間'},
+			{'en': 'quality', 'ja': '質'},
+			{'en': 'demand', 'ja': '～を要求する'},
+			{'en': 'daily', 'ja': '毎日の'},
+			{'en': 'reduce', 'ja': '(数量・程度など)を減らす'},
+			{'en': 'political', 'ja': '政治(上)の'},
+			{'en': 'challenge', 'ja': '難題'},
+			{'en': 'lack', 'ja': '不足'},
+			{'en': 'develop', 'ja': '～を発展[発達]させる'},
+			{'en': 'correct', 'ja': '正しい'},
+			{'en': 'prevent A from doing', 'ja': 'Aが～するのを妨げる'},
+			{'en': 'serious', 'ja': '深刻な'},
+			{'en': 'shape', 'ja': '形'},
+			{'en': 'diet', 'ja': '(日常の)食事'},
+			{'en': 'contain', 'ja': '(容器・本などが)～を含む'},
+			{'en': 'available', 'ja': '利用できる'},
+			{'en': 'compare A with[to] B', 'ja': 'AをBと比較する'},
+			{'en': 'various', 'ja': 'さまざまな'},
+			{'en': 'note', 'ja': 'メモ'},
+			{'en': 'professor', 'ja': '教授'},
+			{'en': 'deal with A','ja': 'Aを処理する'},
+			{'en': 'be used to A', 'ja': 'Aに慣れている'},
+			{'en': 'prove', 'ja': '～を証明する'},
+			{'en': 'a single', 'ja': 'たった1つの'},
+			{'en': 'goal', 'ja': '目標'},
+			{'en': 'bill', 'ja': '請求書'},
+			{'en': 'solve', 'ja': '～を解決する'},
+			{'en': 'successful', 'ja': '成功した'},
+			{'en': 'prefer A to B', 'ja': 'BよりAが好きである'},
+			{'en': 'medical', 'ja': '医学の'},
+			{'en': 'figure', 'ja': '数値'},
+			{'en': 'risk', 'ja': '危険(性)'},
+			{'en': 'expect', 'ja': '～を予想[予期]する'},
+			{'en': 'ancient', 'ja': '古代の'},
+			{'en': 'exist', 'ja': '存在する'},
+			{'en': 'scientific', 'ja': '科学の'},
+			{'en': 'image', 'ja': 'イメージ'},
+			{'en': 'decision', 'ja': '決定'},
+			{'en': 'encourage', 'ja': '～を励ます'},
+			{'en': 'native', 'ja': '出生地の'},
+			{'en': 'require', 'ja': '～を必要とする'},
+			{'en': 'total', 'ja': '総計の'},
+			{'en': 'function', 'ja': '機能'},
+			{'en': 'material', 'ja': '材料'},
+			{'en': 'prepare', 'ja': '～を準備する'},
+			{'en': 'due to A', 'ja': 'Aが原因で'}
 			];
 
 
