--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Flash Cards</title>
+	<title>第３回英単語テスト（日本語➡英語）</title>
 	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>	
