--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>第３回英単語(日本語➡英語)</title>
+	<title>Flash Cards</title>
 	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>	
 	
 	<div class="title-top">
-		<h1>第３回英単語テスト</h1>	
+		<h1>第４回英単語テスト</h1>	
 
 	<div id="card">
 		<div id="card-front"></div>
@@ -20,65 +20,66 @@
 			'use strict';
 
 			var words = [   {'en': 'guess', 'ja': '～を推測する'},
-   {'en': 'prepare', 'ja': '～を準備する'},
-   {'en': 'develop', 'ja': '～を発展[発達]させる'},
-   {'en': 'solve', 'ja': '～を解決する'},
-   {'en': 'encourage', 'ja': '～を励ます'},
-   {'en': 'expect', 'ja': '～を予想[予期]する'},
-   {'en': 'deal', 'ja': '<dealwithAで>A[問題など]を処理する'},
-   {'en': 'measure', 'ja': '(大きさ・量・速さなど)を測る'},
-   {'en': 'demand', 'ja': '～を要求する'},
-   {'en': 'contain', 'ja': '(容器・本などが)～を含む'},
-   {'en': 'various', 'ja': 'さまざまな'},
-   {'en': 'political', 'ja': '政治(上)の'},
-   {'en': 'scientific', 'ja': '科学の'},
-   {'en': 'medical', 'ja': '医学の'},
-   {'en': 'whole', 'ja': '<thewholeで>全体の'},
-   {'en': 'serious', 'ja': '深刻な'},
-   {'en': 'single', 'ja': '<asingleで>たった1つの'},
-   {'en': 'general', 'ja': '一般的な'},
-   {'en': 'total', 'ja': '総計の'},
-   {'en': 'necessary', 'ja': '必要な'},
-   {'en': 'material', 'ja': '材料'},
-   {'en': 'lack', 'ja': '不足'},
-   {'en': 'decision', 'ja': '決定'},
-   {'en': 'source', 'ja': '(物・事の)源'},
-   {'en': 'risk', 'ja': '危険(性)'},
-   {'en': 'bill', 'ja': '請求書'},
-   {'en': 'professor', 'ja': '(大学の)教授'},
-   {'en': 'diet', 'ja': '(日常の)食事'},
-   {'en': 'quality', 'ja': '質'},
-   {'en': 'data', 'ja': 'データ'},
-   {'en': 'note', 'ja': 'メモ'},
-   {'en': 'challenge', 'ja': '難題'},
-   {'en': 'function', 'ja': '機能'},
-   {'en': 'article', 'ja': '記事'},
-   {'en': 'shape', 'ja': '形'},
-   {'en': 'middle', 'ja': '<themiddleで>中央'},
-   {'en': 'goal', 'ja': '目標'},
-   {'en': 'image', 'ja': 'イメージ'},
-   {'en': 'figure', 'ja': '数値'},
-   {'en': 'decade', 'ja': '10年間'},
-   {'en': 'exist', 'ja': '存在する'},
-   {'en': 'reduce', 'ja': '(数量・程度など)を減らす'},
-   {'en': 'gain', 'ja': '～を得る'},
-   {'en': 'require', 'ja': '～を必要とする'},
-   {'en': 'prove', 'ja': '～を証明する'},
-   {'en': 'prevent', 'ja': '<preventAfromdoingで>Aが～するのを妨げる'},
-   {'en': 'compare', 'ja': '<compareAwith[to]Bで>AをBと比較する'},
-   {'en': 'adapt', 'ja': '～を適合させる'},
-   {'en': 'conduct', 'ja': '～を行う'},
-   {'en': 'prefer', 'ja': '<preferAtoBで>BよりAが好きである'},
-   {'en': 'successful', 'ja': '成功した'},
-   {'en': 'due', 'ja': '<duetoAで>Aが原因で'},
-   {'en': 'available', 'ja': '利用できる'},
-   {'en': 'western', 'ja': '<Westernで>西洋の'},
-   {'en': 'personal', 'ja': '個人の'},
-   {'en': 'ancient', 'ja': '古代の'},
-   {'en': 'used', 'ja': '<beusedtoAで>Aに慣れている'},
-   {'en': 'native', 'ja': '出生地の'},
-   {'en': 'daily', 'ja': '毎日の'},
-   {'en': 'correct', 'ja': '正しい'}
+   {'en': 'generation', 'ja': '世代'},
+   {'en': 'movement', 'ja': '(政治的・社会的な)運動　'},
+   {'en': 'statement', 'ja': '声明'},
+   {'en': 'means', 'ja': '手段　'},
+   {'en': 'expert', 'ja': '専門家'},
+   {'en': 'intelligence', 'ja': '知能'},
+   {'en': 'stage', 'ja': '(変化・発展の)段階'},
+   {'en': 'variety', 'ja': '<a variety of Aで>いろいろなA　'},
+   {'en': 'industry', 'ja': '産業'},
+   {'en': 'patient', 'ja': '患者'},
+   {'en': 'conversation', 'ja': '会話'},
+   {'en': 'clothes', 'ja': '服'},
+   {'en': 'pressure', 'ja': '(社会的な)圧力　'},
+   {'en': 'position', 'ja': '位置　'},
+   {'en': 'degree', 'ja': '(温度・角度などの)度　'},
+   {'en': 'range', 'ja': '範囲　[動] (～の範囲に)及ぶ'},
+   {'en': 'access', 'ja': '(場所への)接近(方法)　'},
+   {'en': 'importance', 'ja': '重要性'},
+   {'en': 'neighbor', 'ja': '隣人'},
+   {'en': 'policy', 'ja': '政策'},
+   {'en': 'indicate', 'ja': '(調査などが)～を示す　'},
+   {'en': 'refer', 'ja': '<refer to Aで>Aに言及する　'},
+   {'en': 'manage', 'ja': '～を経営する'},
+   {'en': 'focus', 'ja': '(注意・意識など)を集中させる　'},
+   {'en': 'promote', 'ja': '～を促進する'},
+   {'en': 'observe', 'ja': '～を観察する　'},
+   {'en': 'raise', 'ja': '(物・料金など)を上げる'},
+   {'en': 'maintain', 'ja': '～を維持する'},
+   {'en': 'search', 'ja': '(場所など)を捜す'},
+   {'en': 'discuss', 'ja': '～について話し合う'},
+   {'en': 'media', 'ja': '<the (mass) mediaで>(マス)メディア'},
+   {'en': 'factor', 'ja': '要因'},
+   {'en': 'distance', 'ja': '距離　'},
+   {'en': 'standard', 'ja': '水準'},
+   {'en': 'volunteer', 'ja': 'ボランティア'},
+   {'en': 'resource', 'ja': '<resourcesで>資源　'},
+   {'en': 'customer', 'ja': '(商店・企業などの)顧客'},
+   {'en': 'strategy', 'ja': '戦略'},
+   {'en': 'region', 'ja': '(広大な)地域'},
+   {'en': 'evidence', 'ja': '証拠'},
+   {'en': 'according', 'ja': '<according to Aで>Aによれば'},
+   {'en': 'rather', 'ja': '<A rather than Bで>BよりもむしろA　'},
+   {'en': 'probably', 'ja': 'たぶん'},
+   {'en': 'perhaps', 'ja': 'ひょっとすると'},
+   {'en': 'instead', 'ja': '(その)代わりに'},
+   {'en': 'especially', 'ja': '特に'},
+   {'en': 'simply', 'ja': '単に'},
+   {'en': 'therefore', 'ja': 'それゆえ'},
+   {'en': 'thus', 'ja': 'したがって'},
+   {'en': 'indeed', 'ja': '本当に'},
+   {'en': 'exactly', 'ja': '正確に'},
+   {'en': 'nearly', 'ja': 'ほとんど'},
+   {'en': 'further', 'ja': '(程度が)さらに　'},
+   {'en': 'immediately', 'ja': 'すぐに'},
+   {'en': 'forward', 'ja': '前へ'},
+   {'en': 'extremely', 'ja': '極めて'},
+   {'en': 'eventually', 'ja': '結局は'},
+   {'en': 'hardly', 'ja': 'ほとんど～ない　(同) scarcely [発音]'},
+   {'en': 'ahead', 'ja': '(位置的に)前方に[を]　'},
+   {'en': 'highly', 'ja': '高度に'}
 			];
 
 
