--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>	
 	
 	<div class="title-top">
-		<h1>第４回英単語テスト</h1>	
+		<h1>第５回英単語テスト</h1>	
 
 	<div id="card">
 		<div id="card-front"></div>
@@ -19,67 +19,67 @@
 		(function() {
 			'use strict';
 
-			var words = [   {'en': 'guess', 'ja': '～を推測する'},
-   {'en': 'generation', 'ja': '世代'},
-   {'en': 'movement', 'ja': '(政治的・社会的な)運動　'},
-   {'en': 'statement', 'ja': '声明'},
-   {'en': 'means', 'ja': '手段　'},
-   {'en': 'expert', 'ja': '専門家'},
-   {'en': 'intelligence', 'ja': '知能'},
-   {'en': 'stage', 'ja': '(変化・発展の)段階'},
-   {'en': 'variety', 'ja': '<a variety of Aで>いろいろなA　'},
-   {'en': 'industry', 'ja': '産業'},
-   {'en': 'patient', 'ja': '患者'},
-   {'en': 'conversation', 'ja': '会話'},
-   {'en': 'clothes', 'ja': '服'},
-   {'en': 'pressure', 'ja': '(社会的な)圧力　'},
-   {'en': 'position', 'ja': '位置　'},
-   {'en': 'degree', 'ja': '(温度・角度などの)度　'},
-   {'en': 'range', 'ja': '範囲　[動] (～の範囲に)及ぶ'},
-   {'en': 'access', 'ja': '(場所への)接近(方法)　'},
-   {'en': 'importance', 'ja': '重要性'},
-   {'en': 'neighbor', 'ja': '隣人'},
-   {'en': 'policy', 'ja': '政策'},
-   {'en': 'indicate', 'ja': '(調査などが)～を示す　'},
-   {'en': 'refer', 'ja': '<refer to Aで>Aに言及する　'},
-   {'en': 'manage', 'ja': '～を経営する'},
-   {'en': 'focus', 'ja': '(注意・意識など)を集中させる　'},
-   {'en': 'promote', 'ja': '～を促進する'},
-   {'en': 'observe', 'ja': '～を観察する　'},
-   {'en': 'raise', 'ja': '(物・料金など)を上げる'},
-   {'en': 'maintain', 'ja': '～を維持する'},
-   {'en': 'search', 'ja': '(場所など)を捜す'},
-   {'en': 'discuss', 'ja': '～について話し合う'},
-   {'en': 'media', 'ja': '<the (mass) mediaで>(マス)メディア'},
-   {'en': 'factor', 'ja': '要因'},
-   {'en': 'distance', 'ja': '距離　'},
-   {'en': 'standard', 'ja': '水準'},
-   {'en': 'volunteer', 'ja': 'ボランティア'},
-   {'en': 'resource', 'ja': '<resourcesで>資源　'},
-   {'en': 'customer', 'ja': '(商店・企業などの)顧客'},
-   {'en': 'strategy', 'ja': '戦略'},
-   {'en': 'region', 'ja': '(広大な)地域'},
-   {'en': 'evidence', 'ja': '証拠'},
-   {'en': 'according', 'ja': '<according to Aで>Aによれば'},
-   {'en': 'rather', 'ja': '<A rather than Bで>BよりもむしろA　'},
-   {'en': 'probably', 'ja': 'たぶん'},
-   {'en': 'perhaps', 'ja': 'ひょっとすると'},
-   {'en': 'instead', 'ja': '(その)代わりに'},
-   {'en': 'especially', 'ja': '特に'},
-   {'en': 'simply', 'ja': '単に'},
-   {'en': 'therefore', 'ja': 'それゆえ'},
-   {'en': 'thus', 'ja': 'したがって'},
-   {'en': 'indeed', 'ja': '本当に'},
-   {'en': 'exactly', 'ja': '正確に'},
-   {'en': 'nearly', 'ja': 'ほとんど'},
-   {'en': 'further', 'ja': '(程度が)さらに　'},
-   {'en': 'immediately', 'ja': 'すぐに'},
-   {'en': 'forward', 'ja': '前へ'},
-   {'en': 'extremely', 'ja': '極めて'},
-   {'en': 'eventually', 'ja': '結局は'},
-   {'en': 'hardly', 'ja': 'ほとんど～ない　(同) scarcely [発音]'},
-   {'en': 'ahead', 'ja': '(位置的に)前方に[を]　'},
-   {'en': 'highly', 'ja': '高度に'}
+			var words = [   
+      {'en': 'within', 'ja': '以内に'},
+   {'en': 'per', 'ja': '～につき'},
+   {'en': 'including', 'ja': '～を含めて'},
+   {'en': 'throughout', 'ja': '～の間ずっと'},
+   {'en': 'despite', 'ja': '～にもかかわらず'},
+   {'en': 'beyond', 'ja': '～の向こうに'},
+   {'en': 'except', 'ja': '～を除いて'},
+   {'en': 'whether', 'ja': '～かどうか'},
+   {'en': 'provided', 'ja': 'もし～ならば'},
+   {'en': 'unless', 'ja': '～でない限り'},
+   {'en': 'difficulty', 'ja': '苦労'},
+   {'en': 'climate', 'ja': '気候'},
+   {'en': 'belief', 'ja': '確信'},
+   {'en': 'contrast', 'ja': '対象'},
+   {'en': 'blood', 'ja': '血'},
+   {'en': 'progress', 'ja': '進歩'},
+   {'en': 'damage', 'ja': '損害'},
+   {'en': 'item', 'ja': '項目'},
+   {'en': 'concept', 'ja': '概念'},
+   {'en': 'task', 'ja': '仕事'},
+   {'en': 'surface', 'ja': '表面'},
+   {'en': 'sale', 'ja': '販売'},
+   {'en': 'income', 'ja': '収入'},
+   {'en': 'habit', 'ja': '習慣'},
+   {'en': 'account', 'ja': '報告'},
+   {'en': 'danger', 'ja': '危険'},
+   {'en': 'freedom', 'ja': '自由'},
+   {'en': 'aspect', 'ja': '一面'},
+   {'en': 'loss', 'ja': '失うこと'},
+   {'en': 'a mass of A', 'ja': '大量のA'},
+   {'en': 'decline', 'ja': '減少する'},
+   {'en': 'replace', 'ja': '～に取って代わる'},
+   {'en': 'spread', 'ja': '広まる'},
+   {'en': 'waste', 'ja': '～をむだに使う'},
+   {'en': 'supply', 'ja': '～に[を]供給する'},
+   {'en': 'mention', 'ja': '～に（ついて）言及する'},
+   {'en': 'survive', 'ja': '～を生き延びる'},
+   {'en': 'add', 'ja': '（～を）加える'},
+   {'en': 'separate', 'ja': '～を隔てる'},
+   {'en': 'serve', 'ja': '～に（飲食物）を出す'},
+   {'en': 'regard A as B', 'ja': 'AをBとみなす'},
+   {'en': 'decrease', 'ja': '減る'},
+   {'en': 'perform', 'ja': '～を上演する'},
+   {'en': 'attend', 'ja': 'に出席する'},
+   {'en': 'achieve', 'ja': '～を達成する'},
+   {'en': 'promise', 'ja': '収束する'},
+   {'en': 'connect A to[with] B', 'ja': 'AをBにつなぐ'},
+   {'en': 'count', 'ja': '数える'},
+   {'en': 'attract', 'ja': '引きつける'},
+   {'en': 'doubt', 'ja': '疑う'},
+   {'en': 'concerned', 'ja': '心配している'},
+   {'en': 'official', 'ja': '公式の'},
+   {'en': 'appropriate', 'ja': '適切な'},
+   {'en': 'female', 'ja': '女性の'},
+   {'en': 'fresh', 'ja': '新鮮な'},
+   {'en': 'powerful', 'ja': '影響力のある'},
+   {'en': 'familiar', 'ja': 'よく知られた'},
+   {'en': 'ordinary', 'ja': '普通の'},
+   {'en': 'wild', 'ja': '野生の'},
+   {'en': 'fat', 'ja': '太っている'}
 			];
 
 
