--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>	
 	
 	<div class="title-top">
-		<h1>第５回英単語テスト</h1>	
+		<h1>第６回英単語テスト</h1>	
 
 	<div id="card">
 		<div id="card-front"></div>
@@ -20,66 +20,66 @@
 			'use strict';
 
 			var words = [   
-      {'en': 'within', 'ja': '以内に'},
-   {'en': 'per', 'ja': '～につき'},
-   {'en': 'including', 'ja': '～を含めて'},
-   {'en': 'throughout', 'ja': '～の間ずっと'},
-   {'en': 'despite', 'ja': '～にもかかわらず'},
-   {'en': 'beyond', 'ja': '～の向こうに'},
-   {'en': 'except', 'ja': '～を除いて'},
-   {'en': 'whether', 'ja': '～かどうか'},
-   {'en': 'provided', 'ja': 'もし～ならば'},
-   {'en': 'unless', 'ja': '～でない限り'},
-   {'en': 'difficulty', 'ja': '苦労'},
-   {'en': 'climate', 'ja': '気候'},
-   {'en': 'belief', 'ja': '確信'},
-   {'en': 'contrast', 'ja': '対象'},
-   {'en': 'blood', 'ja': '血'},
-   {'en': 'progress', 'ja': '進歩'},
-   {'en': 'damage', 'ja': '損害'},
-   {'en': 'item', 'ja': '項目'},
-   {'en': 'concept', 'ja': '概念'},
-   {'en': 'task', 'ja': '仕事'},
-   {'en': 'surface', 'ja': '表面'},
-   {'en': 'sale', 'ja': '販売'},
-   {'en': 'income', 'ja': '収入'},
-   {'en': 'habit', 'ja': '習慣'},
-   {'en': 'account', 'ja': '報告'},
-   {'en': 'danger', 'ja': '危険'},
-   {'en': 'freedom', 'ja': '自由'},
-   {'en': 'aspect', 'ja': '一面'},
-   {'en': 'loss', 'ja': '失うこと'},
-   {'en': 'a mass of A', 'ja': '大量のA'},
-   {'en': 'decline', 'ja': '減少する'},
-   {'en': 'replace', 'ja': '～に取って代わる'},
-   {'en': 'spread', 'ja': '広まる'},
-   {'en': 'waste', 'ja': '～をむだに使う'},
-   {'en': 'supply', 'ja': '～に[を]供給する'},
-   {'en': 'mention', 'ja': '～に（ついて）言及する'},
-   {'en': 'survive', 'ja': '～を生き延びる'},
-   {'en': 'add', 'ja': '（～を）加える'},
-   {'en': 'separate', 'ja': '～を隔てる'},
-   {'en': 'serve', 'ja': '～に（飲食物）を出す'},
-   {'en': 'regard A as B', 'ja': 'AをBとみなす'},
-   {'en': 'decrease', 'ja': '減る'},
-   {'en': 'perform', 'ja': '～を上演する'},
-   {'en': 'attend', 'ja': 'に出席する'},
-   {'en': 'achieve', 'ja': '～を達成する'},
-   {'en': 'promise', 'ja': '収束する'},
-   {'en': 'connect A to[with] B', 'ja': 'AをBにつなぐ'},
-   {'en': 'count', 'ja': '数える'},
-   {'en': 'attract', 'ja': '引きつける'},
-   {'en': 'doubt', 'ja': '疑う'},
-   {'en': 'concerned', 'ja': '心配している'},
-   {'en': 'official', 'ja': '公式の'},
-   {'en': 'appropriate', 'ja': '適切な'},
-   {'en': 'female', 'ja': '女性の'},
-   {'en': 'fresh', 'ja': '新鮮な'},
-   {'en': 'powerful', 'ja': '影響力のある'},
-   {'en': 'familiar', 'ja': 'よく知られた'},
-   {'en': 'ordinary', 'ja': '普通の'},
-   {'en': 'wild', 'ja': '野生の'},
-   {'en': 'fat', 'ja': '太っている'}
+   {'en': 'technique', 'ja': '技術'},
+   {'en': 'phrase', 'ja': '成句'},
+   {'en': 'advantage', 'ja': '利点'},
+   {'en': 'character', 'ja': '性格'},
+   {'en': 'gas', 'ja': 'ガス'},
+   {'en': 'citizen', 'ja': '市民'},
+   {'en': 'truth', 'ja': '真実'},
+   {'en': 'percentage', 'ja': 'パーセント'},
+   {'en': 'explanation', 'ja': 'もし～ならば'},
+   {'en': 'instance', 'ja': '例'},
+   {'en': 'mark', 'ja': '印'},
+   {'en': 'pollution', 'ja': '汚染'},
+   {'en': 'feature', 'ja': '特徴'},
+   {'en': 'trade', 'ja': '貿易'},
+   {'en': 'tool', 'ja': '道具'},
+   {'en': 'sort', 'ja': '種類'},
+   {'en': 'atmosphere', 'ja': '雰囲気'},
+   {'en': 'impact', 'ja': '影響'},
+   {'en': 'attitude', 'ja': '態度'},
+   {'en': 'crowd', 'ja': '群衆'},
+   {'en': 'disappear', 'ja': '姿を消す'},
+   {'en': 'define', 'ja': '定義する'},
+   {'en': 'reflect', 'ja': '反射する'},
+   {'en': 'contribute', 'ja': '貢献する'},
+   {'en': 'represent', 'ja': '代表する'},
+   {'en': 'match', 'ja': '～に合う'},
+   {'en': 'exchange', 'ja': '交換する'},
+   {'en': 'confuse', 'ja': '困惑させる'},
+   {'en': 'respond', 'ja': '反応する'},
+   {'en': 'treat', 'ja': '～を扱う'},
+   {'en': 'male', 'ja': '男性の'},
+   {'en': 'huge', 'ja': '巨大な'},
+   {'en': 'professional', 'ja': 'プロの'},
+   {'en': 'essential', 'ja': '必要不可欠な'},
+   {'en': 'current', 'ja': '現在の'},
+   {'en': 'positive', 'ja': '前向きな'},
+   {'en': 'chemical', 'ja': '化学の'},
+   {'en': 'comfortable', 'ja': '快適な'},
+   {'en': 'central', 'ja': '中央の'},
+   {'en': 'negative', 'ja': '悪い'},
+   {'en': 'coal', 'ja': '石炭'},
+   {'en': 'gene', 'ja': '遺伝子'},
+   {'en': 'traffic', 'ja': '交通(量)'},
+   {'en': 'reality', 'ja': '現実'},
+   {'en': 'happiness', 'ja': '幸福'},
+   {'en': 'balance', 'ja': 'バランス'},
+   {'en': 'universe', 'ja': '宇宙'},
+   {'en': 'factory', 'ja': '工場'},
+   {'en': 'muscle', 'ja': '筋肉'},
+   {'en': 'audience', 'ja': '観客'},
+   {'en': 'cycle', 'ja': '循環'},
+   {'en': 'electricity', 'ja': '電気'},
+   {'en': 'link', 'ja': 'つながり'},
+   {'en': 'cancer', 'ja': 'がん'},
+   {'en': 'contact', 'ja': '連絡'},
+   {'en': 'favor', 'ja': '支持'},
+   {'en': 'career', 'ja': '職業'},
+   {'en': 'majority', 'ja': '大多数'},
+   {'en': 'officer', 'ja': '役人'},
+   {'en': 'democracy', 'ja': '民主主義'}
 			];
 
 
